--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -108,6 +108,8 @@ body {
 .footer-container {
   bottom: 0;
   width: 100%;
+  margin-right: 0;
+  margin-left: 0;
   svg {
     display: block;
     margin: auto 0 0 0;
@@ -115,9 +117,19 @@ body {
 }
 
 .footer-content {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
   margin-top: 0;
   background-color: $main-green;
-  padding: 20px;
+  padding: 0 20px 20px 20px;
+  a {
+    text-decoration: none;
+    color: $secondary-green;
+    &:hover {
+      color: $main-white;
+    }
+  }
 }
 
 @media (max-width: $tablet-width) {
